# opencaselist-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  claude_desktop_config.json  claude_desktop_config.json.example  docx_parser.py  local_index.py  models.py  packet_builder.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  wiki_client.py
.claude/skills/: build-packet.md  find-team.md  parse-file.md  search-evidence.md
.github/workflows/: test.yml
docs/: AUTH.md
tests/: conftest.py  test_docx_parser.py  test_local_index.py  test_packet_builder.py  test_server_tools.py  test_wiki_client.py
tests/fixtures/: make_fixtures.py
