[project]
name = "opencaselist-mcp"
version = "0.1.0"
description = "MCP server for OpenCaselist — debate evidence and card search assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
opencaselist-mcp = "server:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
