[project]
name = "opencaselist-mcp"
version = "0.1.0"
description = "MCP server for OpenCaselist — debate evidence and card search assistant"
readme = "README.md"
keywords = ["mcp", "debate", "opencaselist", "claude", "evidence"]
requires-python = ">=3.12"
dependencies = [
    "mcp~=1.28",
    "httpx~=0.28",
    "pydantic~=2.13",
    "pydantic-settings~=2.14",
    "python-dotenv~=1.2",
    "python-docx~=1.2",
    "lxml~=6.1",
    "beautifulsoup4~=4.15",
]

[project.scripts]
opencaselist-mcp = "server:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest~=9.1",
    "pytest-asyncio~=1.4",
    "pytest-cov~=7.1",
    "respx~=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.uv]
dev-dependencies = [
    "pytest~=9.1",
    "pytest-asyncio~=1.4",
    "pytest-cov~=7.1",
    "respx~=0.23",
]
